Fix overflows caused by sizing mistakes

--- a/components/App/App.module.scss
+++ b/components/App/App.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  width: 100vw;
   height: 100svh;
 }
 .content {
