--- a/index.scss
+++ b/index.scss
@@ -25,6 +25,7 @@
   --bg1: #bbb;
   --bg2: #ddd;
 
+  --header-padding: 12px;
   --tabs-bg: rgb(90, 83, 79);
   --tabs-text: #fff;
   --tabs-border: rgba(203, 203, 203, 0.796);
